# pytracik

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
examples/: yumi_ik.py
pytracik/: __init__.py  trac_ik.py
src/: pytracik.cpp
